feat: adding release workflow
Signed-off-by: Janos Sarusi-Kis <janossk@cisco.com>